Added meta tags for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
+  <meta name="title" content="Cricket Tournament Fixture (schedule) ">
+  <meta name="description" content="Generate Random Cricket Tournament Fixture ">
+  <meta name="keywords" content="Cricket, schedule, fixture, Tournament">
+  <meta name="author" content="Vikas Chauhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
 	<!--
