--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 
 <head>
 	<meta charset="utf-8">
-  <meta name="title" content="Cricket Tournament Fixture (schedule) ">
-  <meta name="description" content="Generate Random Cricket Tournament Fixture ">
+  <meta name="title" content="Cricket Fixture Generator (schedule) ">
+  <meta name="description" content="Cricket Fixture Generator ">
   <meta name="keywords" content="Cricket, schedule, fixture, Tournament">
   <meta name="author" content="Vikas Chauhan">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
